--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/helpers.css">
+   
     <link rel="stylesheet" href="styles/media-queries.css">
    
     <script src="https://kit.fontawesome.com/9958695687.js" crossorigin="anonymous"></script>
@@ -41,9 +44,9 @@
                     <a href="">Collection</a>
                 </div>
                 <div class="nav-link">
-                    <a class ="color-gray" href="">Spark</a>
+                    <a class ="spark" href="">Spark</a>
                 </div>
-                <div class="ico-wrappers">
+                <div class="icon-wrapper">
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
             </div>
@@ -74,19 +77,20 @@
         <div class="column-wrapper">
             <div class="column">
                 <div class="top-heading">
-                    <h3>CodePen is a <span class="bold-text">social development environment</span> for front-end-designers and developers.</h3>
+                    <h3>CodePen is a <span class="bold-text">social development environment</span> for front-end designers and developers. <span><i class="fa-regular fa-hand"></i></span></h3>
                     <!-- Icon Hand goes here -->
-                    <i class="fa-regular fa-hand"></i>
-                    <p>It´s the best place to build and deploy a website, show off your work, build test cases, and finf inspiration.</p>
+                    
+                    <p>It´s the best place to build and deploy a website, show off your work, build test cases, and find inspiration.</p>
                 </div>
                 <div class="btn-heading">
                     <div class="sing-btn">
-                        <button type="submit" class="green-btn">Sing Up for Free</button>
+                        <button type="submit" class="green-btn"><span class="bold-text">Sign Up for Free</span></button>
                     </div>
                     <div class="learn-btn">
                         <button type="submit" class="black-btn">Learn More</button>
                     </div> 
                 </div>
+                <div class="spacer40"></div>
             </div>
             <div class="column">
                 <p> This is <span class="blue-text">Code Pen Projects</span>!</p>
@@ -98,16 +102,16 @@
     </div>
     <div class="footer">
         <div class="nav-btn">
-            <button type="submit" class="btn">CodePen for <span class="bold-text">TEAMS</span></button>
+            <button type="submit" class="square-btn">CodePen for <span class="bold-text">TEAMS</span></button>
         </div>
         <div class="nav-btn">
-            <button type="submit" class="btn">CodePen for <span class="bold-text">EDUCATION</span></button>
+            <button type="submit" class="square-btn">CodePen for <span class="bold-text">EDUCATION</span></button>
         </div>
         <div class="nav-btn">
-            <button type="submit" class="btn">CodePen for <span class="bold-text">PRIVACY</span></button>
+            <button type="submit" class="square-btn">CodePen for <span class="bold-text">PRIVACY</span></button>
         </div>
         <div class="nav-btn">
-            <button type="submit" class="btn">CodePen for <span class="bold-text">WRITING</span></button>
+            <button type="submit" class="square-btn">CodePen for <span class="bold-text">WRITING</span></button>
         </div>
     </div>
 </body>
