--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="">Posts</a>
                 </div>
                 <div class="nav-link">
-                    <a href="">Collection</a>
+                    <a href="">Collections</a>
                 </div>
                 <div class="nav-link">
                     <a class ="spark" href="">Spark</a>
@@ -76,25 +76,28 @@
     <div class="features-section">
         <div class="column-wrapper">
             <div class="column">
-                <div class="top-heading">
-                    <h3>CodePen is a <span class="bold-text">social development environment</span> for front-end designers and developers. <span><i class="fa-regular fa-hand"></i></span></h3>
-                    <!-- Icon Hand goes here -->
-                    
+                <div class="top-wrapper">
+                    <h3>CodePen is a 
+                        <span class="bold-text">social development environment</span> 
+                        for front-end designers and developers. 
+                        <span>&#128075</span>
+                    </h3>
+                
                     <p>It´s the best place to build and deploy a website, show off your work, build test cases, and find inspiration.</p>
                 </div>
-                <div class="btn-heading">
-                    <div class="sing-btn">
+                <div class="bottom-wrapper">
+                    <div class="left-section">
                         <button type="submit" class="green-btn"><span class="bold-text">Sign Up for Free</span></button>
                     </div>
-                    <div class="learn-btn">
+                    <div class="right-section">
                         <button type="submit" class="black-btn">Learn More</button>
                     </div> 
                 </div>
                 <div class="spacer40"></div>
             </div>
             <div class="column">
-                <p> This is <span class="blue-text">Code Pen Projects</span>!</p>
-                <div class="section-img">
+                <p class="img-text"> This is <span class="blue-text">Code Pen Projects</span>!</p>
+                <div class="img-wrapper">
                     <img src="./images/sections/lmr7a8E.png" tag="CodePen Project">
                 </div>
             </div>
