--- a/index.html
+++ b/index.html
@@ -52,29 +52,30 @@
             </div>
         </div>
         <div class="right-column">
-            <div class="nav-btn">
-                <button type="submit" class="btn">
-                    Create
-                    <span class="ico-btn">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-                </button>
+            <div class="btn-wrapper">
+                <div class="nav-btn">
+                    <button type="submit" class="btn">
+                        Create
+                        <span class="ico-btn">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
+                    </button>
+                </div>
+                <!-- Icon Find goes here -->
+                <div class="icon-find">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="nav-btn">
+                    <button type="submit" class="btn">Log In</button>
+                </div>
+                <div class="nav-btn">
+                    <button type="submit" class="btn">Sing Up</button>
+                </div>
             </div>
-            <!-- Icon Find goes here -->
-            <div class="icon-find">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            <div class="nav-btn">
-                <button type="submit" class="btn">Log In</button>
-            </div>
-            <div class="nav-btn">
-                <button type="submit" class="btn">Sing Up</button>
-            </div>
-
         </div>
     </div>
     <div class="features-section">
-        <div class="column-wrapper">
+        <div class="columns-wrapper">
             <div class="column">
                 <div class="top-wrapper">
                     <h3>CodePen is a 
@@ -85,11 +86,11 @@
                 
                     <p>It´s the best place to build and deploy a website, show off your work, build test cases, and find inspiration.</p>
                 </div>
-                <div class="bottom-wrapper">
-                    <div class="left-section">
+                <div class="btn-wrapper">
+                    <div class="nav-btn">
                         <button type="submit" class="green-btn"><span class="bold-text">Sign Up for Free</span></button>
                     </div>
-                    <div class="right-section">
+                    <div class="nav-btn">
                         <button type="submit" class="black-btn">Learn More</button>
                     </div> 
                 </div>
@@ -104,17 +105,19 @@
         </div> 
     </div>
     <div class="footer">
-        <div class="nav-btn">
-            <button type="submit" class="square-btn">CodePen for <span class="bold-text">TEAMS</span></button>
-        </div>
-        <div class="nav-btn">
-            <button type="submit" class="square-btn">CodePen for <span class="bold-text">EDUCATION</span></button>
-        </div>
-        <div class="nav-btn">
-            <button type="submit" class="square-btn">CodePen for <span class="bold-text">PRIVACY</span></button>
-        </div>
-        <div class="nav-btn">
-            <button type="submit" class="square-btn">CodePen for <span class="bold-text">WRITING</span></button>
+       <div class="square-btn-wrapper">
+            <div class="nav-btn">
+                <button type="submit" class="square-btn">CodePen for <span class="bold-text">TEAMS</span></button>
+            </div>
+            <div class="nav-btn">
+                <button type="submit" class="square-btn">CodePen for <span class="bold-text">EDUCATION</span></button>
+            </div>
+            <div class="nav-btn">
+                <button type="submit" class="square-btn">CodePen for <span class="bold-text">PRIVACY</span></button>
+            </div>
+            <div class="nav-btn">
+                <button type="submit" class="square-btn">CodePen for <span class="bold-text">WRITING</span></button>
+            </div>
         </div>
     </div>
 </body>
