--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
-    
+   
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/homepage.css">
@@ -44,11 +44,13 @@
                     <a href="">Collections</a>
                 </div>
                 <div class="nav-link">
-                    <a class ="spark" href="">Spark</a>
+                    <a class ="spark" href="">Spark
+                        <span class="icon-wrapper">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
+                    </a>
                 </div>
-                <div class="icon-wrapper">
-                    <i class="fa-solid fa-chevron-down"></i>
-                </div>
+                
             </div>
         </div>
         <div class="right-column">
